samples/_failures_safe/1761255585_8c1f08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70cf5bb9.c: In function ‘main’:
./samples/SAFE/__tmp_70cf5bb9.c:177:5: error: expected declaration or statement at end of input
  177 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_70cf5bb9.c:177:5: error: expected declaration or statement at end of input
